tests/parser/bad/cmodule-contract-cid-lparen-id-colon-with.scilla
scilla_version 0

contract Nothing
( something : with
